k8s/overlays/staging/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: flipstar-staging
  labels:
    app.kubernetes.io/part-of: flipstar
    environment: staging
